WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277565
Crash under makeString() in TextResourceDecoder::decodeAndFlush()
https://bugs.webkit.org/show_bug.cgi?id=277565
Summary
Crash under makeString() in TextResourceDecoder::decodeAndFlush()
Chris Dumez
Reported
2024-08-02 13:30:22 PDT
Crash under makeString() in TextResourceDecoder::decodeAndFlush(): ``` 5 WTF::String WTF::makeString<WTF::String, WTF::String>(WTF::String, WTF::String) ==> 5 WebCore::TextResourceDecoder::decodeAndFlush(std::__1::span<unsigned char const, 18446744073709551615ul>) <== 5 WebCore::TextResourceDecoder::textFromUTF8(std::__1::span<unsigned char const, 18446744073709551615ul>) 5 WebCore::FetchBodyConsumer::takeAsText() 5 WebCore::FetchBodyConsumer::resolve(WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise>>&&, WTF::String const&, WebCore::FetchBodyOwner*, WebCore::ReadableStream*) 5 WebCore::FetchBodyConsumer::loadingSucceeded(WTF::String const&) 5 WebCore::FetchBody::loadingSucceeded(WTF::String const&) 5 WebCore::FetchResponse::didSucceed(WebCore::NetworkLoadMetrics const&) 5 WebCore::FetchResponse::Loader::didSucceed(WebCore::NetworkLoadMetrics const&) 5 WebCore::DocumentThreadableLoader::didFinishLoading(WTF::ObjectIdentifierGeneric<WebCore::ResourceLoader, WTF::ObjectIdentifierThreadSafeAccessTraits<unsigned long long>, unsigned long long>, WebCore::NetworkLoadMetrics const&) 5 WebCore::CachedResource::checkNotify(WebCore::NetworkLoadMetrics const&, WebCore::LoadWillContinueInAnotherProcess) ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-08-02 13:30:33 PDT
<
rdar://133008864
>
Chris Dumez
Comment 2
2024-08-02 14:08:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31661
EWS
Comment 3
2024-08-03 15:35:53 PDT
Committed
281811@main
(fa8948cde34c): <
https://commits.webkit.org/281811@main
> Reviewed commits have been landed. Closing PR #31661 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug