Crash under makeString() in TextResourceDecoder::decodeAndFlush() https://bugs.webkit.org/show_bug.cgi?id=277565 rdar://133008864

Reviewed by Darin Adler.

The crash seems to occurs because makeString() calls CRASH() when the resulting
String's size wouldn't fit in a int32_t. There is nothing guaranteeing that the
decoded data will have a size that will fit in a int32_t so I'm updating the
code to use tryMakeString() instead which handles overflows without crashing
and log an error in this case.

* Source/WebCore/loader/TextResourceDecoder.cpp:
(WebCore::TextResourceDecoder::decodeAndFlush):

Canonical link: https://commits.webkit.org/281811@main